ZumZumFinancials_Dev1/src/objects/Reminders_Statements__c.object
<CustomObject>
    <fields>
        <fullName>Definition__c</fullName>
        <label>Definition</label>
        <picklist>
            <picklistValues>
                <fullName>Reminder 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminder 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_Period__c</fullName>
        <label>Frequency Period</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Reminders &amp; Statements</label>
    <nameField>
        <label>Reminders &amp; Statements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reminders &amp; Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>